Swap to batch norm

--- a/services/auto/src/configs/seeker-sac.yaml
+++ b/services/auto/src/configs/seeker-sac.yaml
@@ -24,6 +24,8 @@ seeker-sac:
 
         # === Model ===
         use_state_preprocessor: True
+        actor_hiddens: [256]
+        critic_hiddens: [256]
         model:
             use_lstm: False
             custom_model: "sensor"
