Added clipped SAQ

--- a/services/auto/src/configs/seeker-sacq.yaml
+++ b/services/auto/src/configs/seeker-sacq.yaml
@@ -1,7 +1,7 @@
 # This configuration can expect to reach -160 reward in 10k-20k timesteps
-seeker-sac:
-    run: SAC
-    checkpoint_freq: 10
+seeker-sacq:
+    run: SACQ
+    checkpoint_freq: 50
     stop:
         episode_reward_mean: 2
     config:
@@ -10,17 +10,12 @@ seeker-sac:
         env: MultiRobot-v0
         env_config:
             headless: True
-            creation_delay: 1
+            creation_delay: 10
             reset_on_target: True
 
         # === Evaluation ===
-        #eager: False
         evaluation_interval: 10
-        evaluation_num_episodes: 10
-
-        # Maybe unused
-        exploration_fraction: 0.1
-        schedule_max_timesteps: 100000
+        evaluation_num_episodes: 20
 
         # === Model ===
         use_state_preprocessor: True
@@ -28,22 +23,19 @@ seeker-sac:
             use_lstm: False
             custom_model: "sensor"
 
-        # === Model ===
-        #exploration_noise_type: "gaussian"
-        #exploration_gaussian_sigma: 0.06
-
         # === Parallelism ===
-        num_gpus: 1
-        num_workers: 8
+        num_workers: 4
         num_gpus_per_worker: 0
+        num_gpus: 0
 
         # === Optimization ===
         tau: 0.005
-        min_iter_time_s: 1
+        min_iter_time_s: 60 
+        compress_observations: True
         learning_starts: 10000
 
         optimization:
-            actor_learning_rate: 0.0003
-            critic_learning_rate: 0.0003
-            entropy_learning_rate: 0.0003
+            actor_learning_rate: 0.0002
+            critic_learning_rate: 0.0002
+            entropy_learning_rate: 0.0002
     
