Client was failing with latest Influx DB

--- a/api/config/production.yaml
+++ b/api/config/production.yaml
@@ -4,7 +4,7 @@ Webserver:
 
 # InfluxDB config
 Influx:
-  host: 'influxdb.default:8086'
+  host: 'influxdb.default'
   dbName: geometry_db
 
 # Kafka config
