--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,25 @@
 version: '2.1'
 services:
   #ui:
-  #  image: digitalpoints/ui:latest
-  ##  ports:
-  #    - '80:80'
+  #  build: ./ui
+  #  image: digitalpoints/ui
+  #  ports:
+  #    - '3000:80'
+  #  depends_on:
+  #    - api
+
 
   #api:
-  #  image: digitalpoints/api:latest
+  #  build: ./api
   #  ports:
   #    - '8888:8888'
   #  links:
+  #    - mongo
   #    - influxdb
   #  environment:
-  #    - INFLUX_HOST=influxdb:8086
+  #    - JWT_SECRET=docker
+  #    - INFLUX_HOST=influxdb
+  #    - MONGO_HOST=mongodb://mongo:27017
   #    - KAFKA_HOST=kafka-0.digitalpoints.io:19092
 
   influxdb:
@@ -25,6 +32,7 @@ services:
       - INFLUXDB_DB=db0
       - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
       - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
+
 
   grafana:
     image: grafana/grafana:latest
@@ -40,10 +48,24 @@ services:
       # sudo mkdir -p /srv/docker/grafana/data; chown 472:472 /srv/docker/grafana/data
       - ./volumes/grafana/data:/var/lib/grafana
 
+
   mongo:
     image: mongo
     ports:
     - "27017:27017"
+  #  volumes:
+  #    # Data persistency
+  #    - ./volumes/mongo:/data/db
+
+
+  # Run this to start the databases
+  #start_dependencies:
+  #  image: dadarek/wait-for-dependencies
+  #  depends_on:
+  #  - mongo
+  #  - influxdb
+  #  command: mongo:27017 influxdb:8086
+
 
 volumes:
   influxdb-storage:
