Finished observation service

--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -6,7 +6,8 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 RUN pip install --upgrade pip
-RUN pip install pyyaml gym graphqlclient kafka-python numpy trimesh
+RUN pip install trimesh==2.38.42 lxml svg.path
+RUN pip install pyyaml gym graphqlclient kafka-python numpy
 RUN pip install transforms3d plotly shapely rtree networkx
 
 COPY . .
