--- a/deployment/cloudbuild/build-and-test.yaml
+++ b/deployment/cloudbuild/build-and-test.yaml
@@ -5,6 +5,13 @@ steps:
 
 
 ######################## UI #########################
+# Pull cached image
+- name: 'gcr.io/cloud-builders/docker'
+  id: 'setup-ui'
+  args: 
+  - 'pull'
+  - 'gcr.io/$PROJECT_ID/digital-points-ui:latest'
+
 # Build
 - name: 'gcr.io/cloud-builders/docker'
   dir: ui
@@ -16,7 +23,7 @@ steps:
   - '--file=Dockerfile'
   - '.'
   id: 'build-ui'
-  waitFor: ['-']
+  waitFor: ['setup-ui']
 
 # Push
 - name: 'gcr.io/cloud-builders/docker'
@@ -31,6 +38,13 @@ steps:
 
 
 ######################## API #########################
+# Pull cached image
+- name: 'gcr.io/cloud-builders/docker'
+  id: 'setup-api'
+  args: 
+  - 'pull'
+  - 'gcr.io/$PROJECT_ID/digital-points-api:latest'
+
 # Build
 - name: 'gcr.io/cloud-builders/docker'
   dir: api
@@ -42,7 +56,7 @@ steps:
   - '--file=Dockerfile'
   - '.'
   id: 'build-api'
-  waitFor: ['-']
+  waitFor: ['setup-api']
 
 # Push
 - name: 'gcr.io/cloud-builders/docker'
