Fix robot control sidebar

--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && \
 RUN pip install --upgrade pip
 RUN pip install trimesh==2.38.42 lxml svg.path
 RUN pip install pyyaml gym graphqlclient kafka-python numpy
-RUN pip install transforms3d plotly shapely rtree networkx
+RUN pip install transforms3d plotly shapely rtree networkx pyquaternion
 
 COPY . .
 
