--- a/deployment/cloudbuild/build-and-deploy.yaml
+++ b/deployment/cloudbuild/build-and-deploy.yaml
@@ -56,6 +56,7 @@ steps:
   args: 
   - 'pull'
   - 'gcr.io/$PROJECT_ID/digital-points-api:latest'
+  waitFor: ['-']
 
 # Build
 - name: 'gcr.io/cloud-builders/docker'
