--- a/ui/package.json
+++ b/ui/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "reactstrap": "^8.0.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
