render point client and implement redux pointcloudsetting

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -18,6 +18,7 @@
     "noImplicitAny": false,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
