--- a/ui/package.json
+++ b/ui/package.json
@@ -34,6 +34,7 @@
     "react-konva": "^16.9.0-0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
+    "react-toastify": "^5.4.1",
     "reactstrap": "^8.0.0",
     "recharts": "^1.8.5",
     "redux": "^4.0.4",
