--- a/ui/package.json
+++ b/ui/package.json
@@ -34,12 +34,15 @@
     "react-konva": "^16.9.0-0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
+    "react-toastify": "^5.4.1",
     "reactstrap": "^8.0.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "subscriptions-transport-ws": "^0.9.16",
+    "tinycolor2": "^1.4.1",
     "todomvc-app-css": "^2.1.0",
     "typescript": "^3.4.4"
   },
