Limit max trajectory distance

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,4 @@ volumes
 zk-single-kafka-single
 services/maps/tmp/
 services/simulator/tmp/
-services/autonomous/src/tmp/
-services/autonomous/src/environment/tmp/geometry_cache.json
-services/autonomous/src/state.png
-services/autonomous/src/checkpoints/
+services/auto/videos/
