Support newer trimesh version

--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -6,8 +6,7 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 RUN pip install --upgrade pip
-RUN pip install trimesh==2.38.42 lxml svg.path
-RUN pip install pyyaml gym graphqlclient kafka-python numpy scikit-image opencv-python-headless colored_traceback
+RUN pip install pyyaml gym graphqlclient kafka-python numpy scikit-image opencv-python-headless colored_traceback trimesh lxml svg.path
 RUN pip install transforms3d plotly shapely rtree networkx pyquaternion astar
 
 # Reinforcement learning dependencies
