--- a/services/auto/src/scenarios/scenarios.yaml
+++ b/services/auto/src/scenarios/scenarios.yaml
@@ -1,3 +1,10 @@
+lab:
+  timestep: 0.1
+  reset_on_target: False
+  default_start: [0,0]
+  default_target: [0,1]
+  building_id: 5dc3dee819dfb1717a23fad9
+
 y2e2:
   timestep: 0.1
   reset_on_target: False
@@ -19,11 +26,10 @@ bottleneck:
   default_start: [1,1]
   default_target: [7,1]
   building_id: "5dd4b521e725ce079c4c2d5b"
-  checkpoint: "../checkpoints/SACQ_MultiRobot-v0_1b51c0e3_2019-11-05_09-10-27g6ibizk2/checkpoint_4000/checkpoint-4000"
+  checkpoint: "../checkpoints/bottleneck/checkpoint_6300/checkpoint-6300"
 
 room:
   timestep: 0.1
   reset_on_target: False
   start_reference: [0,0]
   building_id: "5dc3fefb14921a7c18cff7e9"
- 
