--- a/api/package.json
+++ b/api/package.json
@@ -40,6 +40,7 @@
     "objectid": "^3.2.1",
     "pino": "^5.13.1",
     "pino-pretty": "^3.2.0",
+    "pngjs": "^3.4.0",
     "quaternion-to-euler": "^0.5.0"
   }
 }
